# PySyn

./: README.md  example.py  pyproject.toml
pysyn/: __init__.py  mixer.py  osc.py  time.py  track.py
